--- a/index.html
+++ b/index.html
@@ -17,11 +17,16 @@
             <div class="banner-left">
                 <div class="nav_bar">
                     <ul class="nav_links">
-                      <li class="link"><a href="#home">HOME</a></li>
-                      <li class="link"><a href="#about">ABOUT</a></li>
-                      <li class="link"><a href="#project">PROJECT</a></li>
-                      <li class="link"><a href="#contact">CONTACT</a></li>
-                      <li class="link"><a href="#contact"><button class="btn ">Log In</button></a></li>
+                        <div>
+                            <li class="link"><a href="#contact"><button class="btn ">Log In</button></a></li>
+                        </div>
+                            <li class="link"><a href="#home">HOME</a></li>
+                            <li class="link"><a href="#about">ABOUT</a></li>
+                            <li class="link"><a href="#project">PROJECT</a></li>
+                            <li class="link"><a href="#contact">CONTACT</a></li>
+                      
+
+                     
                     </ul>
                 </div>
                 <label class="switch d-flex">
