--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
 
     
         <section class="section_container contact_container" id="contact">
-            <div class="contact_image">
-                <img src="person-image.png" alt="contact">
+            <div >
+                <img class="contact_image" src="person-image.png" alt="contact">
             </div>
     
             <div class="contact_content">
