--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                             <li class="link"><a href="#about">ABOUT</a></li>
                             <li class="link"><a href="#project">PROJECT</a></li>
                             <li class="link"><a href="#contact">CONTACT</a></li>
+                            <li class="link"><a href="#contact"><button class="btn">LOG IN</button></a></li>
                     </ul>
-                    <button class="link" style="border:2px black solid;padding:10px;background-color: white;border-radius:5px;">Log In</button>
                 </div>
                 <label class="switch d-flex">
                     <input id="toggle-theme" type="checkbox">
