--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                             <li class="link"><a href="#about">ABOUT</a></li>
                             <li class="link"><a href="#project">PROJECT</a></li>
                             <li class="link"><a href="#contact">CONTACT</a></li>
-                            <li class="link "><a href="#contact">LOG IN</a></li>
+                            <li class="link "><a href="#contact"><img style="height:4vh;" src="login.png"/></a></li>
                     </ul>
                 </div>
                 <label class="switch d-flex">
