--- a/index.html
+++ b/index.html
@@ -167,11 +167,12 @@
       <h3 style="color:#4b4dbf;">TOP LOCALITIES</h3>
     
       <div class="pic-ctn">
-          <img src="https://picsum.photos/200/300?t=1" alt="" class="pic">
-          <img src="https://picsum.photos/200/300?t=2" alt="" class="pic">
-          <img src="https://picsum.photos/200/300?t=3" alt="" class="pic">
-          <img src="https://picsum.photos/200/300?t=4" alt="" class="pic">
-          <img src="https://picsum.photos/200/300?t=5" alt="" class="pic">
+          <a href="#"><img src="city-1.png" alt="" class="pic"></a>
+          <a href="#"><img src="city-2.png" alt="" class="pic"></a>
+          <a href="#"><img src="city-3.png" alt="" class="pic"></a>
+          <a href="#"><img src="city-4.png" alt="" class="pic"></a>
+          <a href="#"><img src="city-5.png" alt="" class="pic"></a>
+          <a href="#"><img src="city-6.png" alt="" class="pic"></a>
         </div>
       </section>
 
